# em-tdb

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  compare_tdb.py  etot_fit.py  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
back_old/: 批量化拟合端基数据脚本.txt
backup_old/: gibbs_fit.py  gibbsfit.py
demo/: etotfit.py  gibbsfit.py  tkgui.py
docs/: tdb格式说明.md  开发文档.md  拟合磁熵.md  添加磁熵的方案和计划.md
emtdb/: cli.py  config.py  etotfit.py  gibbsfit.py  sftpfit.py
emtdb-cli/: Cargo.toml
emtdb-cli/src/: main.rs
emtdb-core/: Cargo.toml
emtdb-core/src/: config.rs  fit.rs  folder_parse.rs  lib.rs  tdb_format.rs
emtdb-gui/src/: App.css  App.tsx
emtdb-gui/src-tauri/: Cargo.toml
emtdb-gui/src-tauri/src/: lib.rs  main.rs
emtdb/fitters/: __init__.py  base.py  bm3.py  gibbs.py  parsers.py  readers.py  tdb.py
emtdb/tdb/: __init__.py  tdbi.py  tdbmgr.py
old/: config.toml  gibbs_fit.py  批量化拟合端基数据脚本.txt
scripts/: analyze_da.py  check_potcar_poscar.py  compare_etot_gt_const.py  compare_tdb.py  compare_tdb_endmembers.py  compare_three_tdb.py  etot_fit.py  extract_magnetic_moment.py  gen_snapshots.py  merge_tdb.py
src/: cli.py  config.py  gibbsfit.py
src/tdb/: schema.sql  tdbi.py  tdbmgr.py
tests/: conftest.py  test1.tdb  test2.tdb  test_cli.py
tests/fits-json/BCC-Fe-Mn/: BCC-Fe-Mn-qha.json
tests/fits-json/SER-Ni/: SER-Ni-qha.json
tests/test_fitters/: conftest.py  test_base.py  test_bm3.py  test_gibbs.py  test_parsers.py  test_readers.py  test_tdb.py
