[project]
name = "em-tdb"
version = "0.5.0"
description = "A tool for managing Multi-Principle Element Alloys End-Member Thermodynamic Database files and fitting Phonopy Gibbs-Temperature data."
authors = [
    { name = "Barabama", email = "barabama@qq.com" },
]
maintainers = [
    { name="Wu Bo", email="wubo@fzu.edu.cn" },
]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Materials Science",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "openpyxl>=3.1",
    "scipy>=1.12",
    "sympy>=1.12",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.urls]
Homepage = "https://gitee.com/wubo-movers/em-tdb"
Repository = "https://gitee.com/wubo-movers/em-tdb.git"

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["emtdb*"]
