[project]
name = "em-tdb"
version = "0.5.0"
description = "A tool for managing Multi-Principle Element Alloys End-Member Thermodynamic Database files and fitting Phonopy Gibbs-Temperature data."
authors = [
    { name = "Barabama", email = "barabama@qq.com" },
]
maintainers = [
    { name="Wu Bo", email="wubo@fzu.edu.cn" },
]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Materials Science",
]
requires-python = ">=3.10"
dependencies = [
    "numpy==2.4.6",
    "pandas==2.3.3",
    "matplotlib==3.10.9",
    "openpyxl==3.1.5",
    "scipy==1.17.1",
    "sympy==1.14.0",
    "tqdm==4.67.3",
]

[project.optional-dependencies]
sftp = ["paramiko>=3.4"]
dev = [
    "pytest>=7.4",
]

[project.urls]
Homepage = "https://github.com/Barabama/em-tdb"
Repository = "https://github.com/Barabama/em-tdb.git"

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["emtdb*"]
