[package]
name = "emtdb-gui"
version = "0.1.0"
description = "Gibbs-Temperature SGTE Fitter — Tauri GUI"
authors = ["you"]
edition = "2021"

[lib]
name = "emtdb_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
emtdb-core = { path = "../../emtdb-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
